--- a/connectthedots.html
+++ b/connectthedots.html
@@ -72,6 +72,7 @@
         <li> Networks come in all sizes, from small homes to global systems.</li>
     </ul>
     <hr>
+    <p><a href="buildingbridges.html">Next:The Internet: Building Bridges Across Networks</a></p>
     <p><a href="index.html">Navigate to Main Page</a></p>
 </div>
 
