--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
             <li>Networking Basics 🌐
                 <ul>
                     <li><a href="connectthedots.html">Connect the Dots: How Computers Talk to Each Other</a></li>
+                    <li><a href="buildingbridges.html">The Internet: Building Bridges Across Networks</a></li>
                 </ul>
             </li>
             <!-- Add more explainer items -->
