--- a/buildingbridges.html
+++ b/buildingbridges.html
@@ -65,6 +65,8 @@
 
     <p>Think of all the smaller networks out there – your home, school, businesses, even a coffee shop's Wi-Fi. These are like the individual towns. The internet is the vast system of bridges connecting them! Some networks are private, meaning only certain devices can access them, while the internet itself is the biggest, most open network.</p>
 
+    <img src="https://lh3.googleusercontent.com/pw/AP1GczN3iRLHJ9ZKXGoAuK3P2BwLyj3TXxszlWneNwmEzw-H37Le4M57hFTrQGXgEtD-Tz7AoI13hMSBTbbx3j0b7JJc43XVyEqxYnH_LOlq3OQu_v-bf6g=w2400" alt="networking-ezgif.com-optimize" style="max-width: 100%; height: auto; display: block; margin: 20px auto;">
+
     <p>Let's get ready to explore: Next, we'll dive into how devices find each other on this gigantic network and the secret addresses they use to stay organized!</p>
 
     <hr>
