--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
     <div class="certifications">
         <h2>Certifications 🎓</h2>
         <div>
-            <a href="https://www.credly.com/badges/a443a5c8-c1c5-4faa-b767-9a826d7f5ae0/public_url"><img src="https://img.shields.io/badge/-Security%2B-FF0000?&style=for-the-badge&logo=CompTIA&logoColor=white" alt="Security+"></a>
-            <a href="https://www.credly.com/badges/37c7aedd-dcaa-4d10-9f42-cbbf87bca2fb/public_url"><img src="https://img.shields.io/badge/-Google_Cybersecurity-4285F4?&style=for-the-badge&logo=Google&logoColor=white" alt="Google Cybersecurity"></a>
+            <a href="https://www.credly.com/badges/a443a5c8-c1c5-4faa-b767-9a826d7f5ae0/public_url" target="_blank"></a>><img src="https://img.shields.io/badge/-Security%2B-FF0000?&style=for-the-badge&logo=CompTIA&logoColor=white" alt="Security+"></a>
+            <a href="https://www.credly.com/badges/37c7aedd-dcaa-4d10-9f42-cbbf87bca2fb/public_url" target="_blank"></a>><img src="https://img.shields.io/badge/-Google_Cybersecurity-4285F4?&style=for-the-badge&logo=Google&logoColor=white" alt="Google Cybersecurity"></a>
             <a href="https://www.credly.com/badges/793c2273-9a78-4df7-8a59-260a39a32307/public_url" target="_blank"><img src="https://img.shields.io/badge/-Google_IT_Support-4285F4?&style=for-the-badge&logo=Google&logoColor=white" alt="Google IT Support"></a>
         </div>
     </div>      
