--- a/buildingbridges.html
+++ b/buildingbridges.html
@@ -70,6 +70,7 @@
     <p>Let's get ready to explore: Next, we'll dive into how devices find each other on this gigantic network and the secret addresses they use to stay organized!</p>
 
     <hr>
+    <p><a href="networkneighborhood.html">Next:Navigating Your Network Neighborhood</a></p>
     <p><a href="connectthedots.html">Prev:Connect the Dots: How Computers Talk to Each Other</a></p>
     <p><a href="index.html">Navigate to Main Page</a></p>
 </div>
