--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
                 <ul>
                     <li><a href="connectthedots.html">Connect the Dots: How Computers Talk to Each Other</a></li>
                     <li><a href="buildingbridges.html">The Internet: Building Bridges Across Networks</a></li>
+                    <li><a href="networkneighborhood.html">Navigating Your Network Neighborhood</a></li>
                 </ul>
             </li>
             <!-- Add more explainer items -->
