--- a/networkneighborhood.html
+++ b/networkneighborhood.html
@@ -66,7 +66,7 @@
     <p>Now that we know how devices find each other, let's explore how they actually "talk" using special protocols!</p>
 
     <hr>
-    <p>Up Next: The Language of Networks</p>
+    <p><a href="understandingpings.html">Next:Checking the Network Pulse: Understanding Pings</a></p>
     <p><a href="buildingbridges.html">Prev:The Internet: Building Bridges Across Networks</a></p>
     <p><a href="index.html">Navigate to Main Page</a></p>
 </div>
