--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                     <li><a href="connectthedots.html">Connect the Dots: How Computers Talk to Each Other</a></li>
                     <li><a href="buildingbridges.html">The Internet: Building Bridges Across Networks</a></li>
                     <li><a href="networkneighborhood.html">Navigating Your Network Neighborhood</a></li>
+                    <li><a href="understandingpings.html">Checking the Network Pulse: Understanding Pings</a></li>
                 </ul>
             </li>
             <!-- Add more explainer items -->
