--- a/index.html
+++ b/index.html
@@ -120,6 +120,10 @@
                 <td>SIEM Implementation and Log Analysis</td>
                 <td><a href="https://google.com">Detection Lab 🔎</a></td>
             </tr>
+            <tr>
+                <td>Active Directory Project</td>
+                <td><a href="activedirectoryproj.html">Defense & Detection Lab 📒</a></td>
+            </tr>
             <!-- Add more rows for other skills -->
         </table>
     </div>
