--- a/index.html
+++ b/index.html
@@ -120,10 +120,6 @@
                 <td>SIEM Implementation and Log Analysis</td>
                 <td><a href="https://google.com">Detection Lab 🔎</a></td>
             </tr>
-            <tr>
-                <td>Active Directory Project</td>
-                <td><a href="activedirectoryproj.html">Defense & Detection Lab 📒</a></td>
-            </tr>
             <!-- Add more rows for other skills -->
         </table>
     </div>
@@ -183,7 +179,7 @@
     <div class="projects">
         <h2>Projects 🚀</h2>
         <ul>
-            <li>Detection Lab</li>
+            <li><a href="activedirectoryproj.html">Active Directory Project 📒</a></li>
             <!-- Add more project items -->
         </ul>
     </div>
