--- a/connectthedots.html
+++ b/connectthedots.html
@@ -44,11 +44,27 @@
         li {
             text-align: left;
         }
+        .home-button {
+            background-color: #ffcc00;
+            border: 1px solid #000;
+            border-radius: 5px;
+            padding: 10px 20px;
+            text-decoration: none;
+            color: #000;
+            font-family: 'Press Start 2P', cursive;
+            font-size: 14px;
+            transition: background-color 0.3s;
+        }
+
+        .home-button:hover {
+            background-color: #ffdd44;
+        }
     </style>
 </head>
 <body>
 
 <div class="container">
+    <p><a href="index.html" class="home-button">Main Page</a></p>
     <h1>Connect the Dots: How Computers Talk to Each Other</h1>
 
     <p>Think of a network like your group of friends – you're all linked by shared interests and experiences. Networks are everywhere, not just in technology! For instance, your city's bus routes form a transportation network, and your neighborhood is a network of people.</p>
@@ -73,7 +89,6 @@
     </ul>
     <hr>
     <p><a href="buildingbridges.html">Next:The Internet: Building Bridges Across Networks</a></p>
-    <p><a href="index.html">Navigate to Main Page</a></p>
 </div>
 
 </body>
