--- a/buildingbridges.html
+++ b/buildingbridges.html
@@ -39,12 +39,28 @@
             display: block;
             margin: 20px auto;
         }
+        .home-button {
+            background-color: #ffcc00;
+            border: 1px solid #000;
+            border-radius: 5px;
+            padding: 10px 20px;
+            text-decoration: none;
+            color: #000;
+            font-family: 'Press Start 2P', cursive;
+            font-size: 14px;
+            transition: background-color 0.3s;
+        }
+
+        .home-button:hover {
+            background-color: #ffdd44;
+        }
 
     </style>
 </head>
 <body>
 
 <div class="container">
+    <p><a href="index.html" class="home-button">Main Page</a></p>
     <h1>The Internet: Building Bridges Across Networks</h1>
 
     <p>Remember how we talked about networks connecting devices, like your phone, laptop, and even smart appliances? The internet takes that to the next level! Think of it as the ultimate network, connecting countless smaller networks all over the world.</p>
@@ -72,7 +88,6 @@
     <hr>
     <p><a href="networkneighborhood.html">Next:Navigating Your Network Neighborhood</a></p>
     <p><a href="connectthedots.html">Prev:Connect the Dots: How Computers Talk to Each Other</a></p>
-    <p><a href="index.html">Navigate to Main Page</a></p>
 </div>
 
 </body>
