--- a/networkneighborhood.html
+++ b/networkneighborhood.html
@@ -44,11 +44,27 @@
         li {
             text-align: center;
         }
+        .home-button {
+            background-color: #ffcc00;
+            border: 1px solid #000;
+            border-radius: 5px;
+            padding: 10px 20px;
+            text-decoration: none;
+            color: #000;
+            font-family: 'Press Start 2P', cursive;
+            font-size: 14px;
+            transition: background-color 0.3s;
+        }
+
+        .home-button:hover {
+            background-color: #ffdd44;
+        }
     </style>
 </head>
 <body>
 
 <div class="container">
+    <p><a href="index.html" class="home-button">Main Page</a></p>
     <h1>Navigating Your Network Neighborhood</h1>
 
     <p>Think back to the town (or harbor) analogy. For things to work smoothly, there needs to be a system for identifying who's who and where everyone is located. Networks function the same way! To communicate and keep things organized, each device connected to a network needs a way to be identified.</p>
@@ -68,7 +84,6 @@
     <hr>
     <p><a href="understandingpings.html">Next:Checking the Network Pulse: Understanding Pings</a></p>
     <p><a href="buildingbridges.html">Prev:The Internet: Building Bridges Across Networks</a></p>
-    <p><a href="index.html">Navigate to Main Page</a></p>
 </div>
 
 </body>
