--- a/understandingpings.html
+++ b/understandingpings.html
@@ -39,12 +39,27 @@
             display: block;
             margin: 20px auto;
         }
+        .home-button {
+            background-color: #ffcc00;
+            border: 1px solid #000;
+            border-radius: 5px;
+            padding: 10px 20px;
+            text-decoration: none;
+            color: #000;
+            font-family: 'Press Start 2P', cursive;
+            font-size: 14px;
+            transition: background-color 0.3s;
+        }
 
+        .home-button:hover {
+            background-color: #ffdd44;
+        }
     </style>
 </head>
 <body>
 
 <div class="container">
+    <p><a href="index.html" class="home-button">Main Page</a></p>
     <h1>Checking the Network Pulse: Understanding Pings</h1>
 
     <p>Imagine trying to call someone, but you're not sure if their phone is on or has a signal. That's where a network ping comes in handy! It's like sending out a quick "knock, knock" to see if a device is connected to the network and responding.</p>
@@ -63,7 +78,6 @@
     <hr>
     <!-- <p>"Up Next:"</p>*/ -->
     <p><a href="networkneighborhood.html">Prev:Navigating Your Network Neighborhood</a></p>
-    <p><a href="index.html">Navigate to Main Page</a></p>
 </div>
 
 </body>
