--- a/activedirectoryproj.html
+++ b/activedirectoryproj.html
@@ -66,6 +66,14 @@
         .home-button:hover {
             background-color: #ffdd44;
         }
+        .diagram {
+            display: block;
+            margin: 20px auto; /* Center the image */
+            max-width: 100%;
+            height: auto;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -101,8 +109,8 @@
         <dd>A framework for testing attacks, providing pre-built attack scenarios.</dd>
     </dl>
 
-     <img src="https://lh3.googleusercontent.com/pw/AP1GczMuMNWVIEStwGl7D4Bd0ALWJk4RLthvGLRF7prYRGLThK7vixDx-3cxdHjWkmlzFbDVez0KIRpCbr5XNXl6EoHzj_eatIxysKzLTaJPDfz00oJuITU=w2400" alt="Network Diagram" class="diagram">
-
+      <img src="https://lh3.googleusercontent.com/pw/AP1GczMuMNWVIEStwGl7D4Bd0ALWJk4RLthvGLRF7prYRGLThK7vixDx-3cxdHjWkmlzFbDVez0KIRpCbr5XNXl6EoHzj_eatIxysKzLTaJPDfz00oJuITU=w2400" alt="Network Diagram" class="diagram">
+    
     <h3>How They're Used</h3>
     <ul>
         <li><strong>Setup:</strong> VirtualBox is used to create virtual machines for each component, allowing the entire setup to run on a single computer.</li>
