--- a/index.html
+++ b/index.html
@@ -194,6 +194,12 @@
                     <li><a href="understandingpings.html">Checking the Network Pulse: Understanding Pings</a></li>
                 </ul>
             </li>
+            <li>Infographics 🌐
+                <ul>
+                    <li><a href="">Lockheed Martin Cyber Kill Chain</a></li>
+                    <li><a href="">The CIA Triad</a></li>
+                </ul>
+            </li>
             <!-- Add more explainer items -->
         </ul>
     </div>
