--- a/index.html
+++ b/index.html
@@ -194,10 +194,10 @@
                     <li><a href="understandingpings.html">Checking the Network Pulse: Understanding Pings</a></li>
                 </ul>
             </li>
-            <li>Infographics 🌐
+            <li>Infographics 📈
                 <ul>
-                    <li><a href="">Lockheed Martin Cyber Kill Chain</a></li>
-                    <li><a href="">The CIA Triad</a></li>
+                    <li><a href="CIA triad.html">The CIA Triad</a></li>
+                    <li><a href="Cyber Kill Chain.html">Lockheed Martin Cyber Kill Chain</a></li>
                 </ul>
             </li>
             <!-- Add more explainer items -->
