--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
             </li>
             <li>Infographics 📈
                 <ul>
-                    <li><a href="CIA Triad.html">The CIA Triad</a></li>
+                    <li><a href="Triad.html">The CIA Triad</a></li>
                     <li><a href="Cyber Kill Chain.html">Lockheed Martin Cyber Kill Chain</a></li>
                 </ul>
             </li>
