--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <div class="explainer">
         <h2>Explainer 📖</h2>
         <ul>
-            <li><strong>Networking Basics 🌐
+            <li><Strong>NETWORKING BASICS 🌐</Strong>
                 <ul>
                     <li><a href="connectthedots.html">Connect the Dots: How Computers Talk to Each Other</a></li>
                     <li><a href="buildingbridges.html">The Internet: Building Bridges Across Networks</a></li>
@@ -194,11 +194,7 @@
                     <li><a href="understandingpings.html">Checking the Network Pulse: Understanding Pings</a></li>
                 </ul>
             </li>
-            <li><strong>Infographics 📈
-                <ul>
-                    <li><a href="Triad.html">The CIA Triad</a></li>
-                    <li><a href="Cyber Kill Chain.html">Lockheed Martin Cyber Kill Chain</a></li>
-                </ul>
+            <li><a href="infographics.html"><strong>INFOGRAPHICS 📈</Strong></a></li>
             </li>
             <!-- Add more explainer items -->
         </ul>
