--- a/activedirectoryproj.html
+++ b/activedirectoryproj.html
@@ -97,7 +97,7 @@
     <dl>
         <dt>Windows Server 2022:</dt>
         <dd>Acts as the domain controller, hosting the Active Directory service.</dd>
-        <dt>Windows 10:</dt>
+        <dt>Windows 10/11:</dt>
         <dd>Represents a target machine within the domain that will be subject to attacks and monitoring.</dd>
         <dt>Splunk:</dt>
         <dd>A SIEM (Security Information and Event Management) system to collect and analyze logs from the Windows machines.</dd>
