--- a/infographics.html
+++ b/infographics.html
@@ -118,6 +118,7 @@
             <img src="https://lh3.googleusercontent.com/pw/AP1GczPZ6B4flcAf6QVp0E1CkXxf5DrapmCvBXkXZOv9Du_UeAWDoJ-alfAYHytAqz9xxyBxbsonjJXVgnrLm4ei35-jAif2ltQ6LczxeBAc2Oo6jEpjKVY=w2400" alt="Infographic 1" onclick="openLightbox();changeImage(this.src)">
             <img src="https://lh3.googleusercontent.com/pw/AP1GczPCjDV4aCUsd20xXGjsmwIH6wkUFBH6dwV1FSo1neFUaQVQrJWYUd2JcTqX54SwjyysHbZne2Wxrfeb2Y7jCA_g7JyhFvP12d46qPdozCj8N6OBEGo=w2400" alt="Infographic 1" onclick="openLightbox();changeImage(this.src)">
             <img src="https://lh3.googleusercontent.com/pw/AP1GczO9KuSXKh37Rv2oV9B9I6yNwnOl1ja0QEp5bGqQZ_GcpcVVp9XoUb_2uNiCNOFOIyAfe0PspOhPKdaVzeXxA-mj-K_WbEPC0NLI2cxg6i5n1wt8vhU=w2400" alt="Infographic 1" onclick="openLightbox();changeImage(this.src)">
+            <img src="https://lh3.googleusercontent.com/pw/AP1GczPz82AhvrruNBagpjfrb2EpBqbBDhG0Bb9q6qBmMNzgKG2ptJc6MUuIuuuLqI3cjvyBJx1vFMQ-xBWpe0TnvA69WIT07nZotc98q7D7TFpg3JDdNSs=w2400" alt="Infographic 1" onclick="openLightbox();changeImage(this.src)">
             <!-- Add more thumbnails as needed -->
         </div>
         <a href="index.html" class="home-link">Home</a>
