--- a/index.html
+++ b/index.html
@@ -118,7 +118,17 @@
             text-decoration: none;
         }
         .explainer li ul li a:hover {
-            text-decoration: underline;
+            text-decoration: none;
+            background-color: #007bff;
+            color: #fff;
+        }
+        a {
+            text-decoration: none;
+            color: #007bff;
+        }
+        a:hover {
+            background-color: #007bff;
+            color: #fff;
         }
     </style>
 </head>
@@ -142,8 +152,8 @@
                 <th>Associated Project</th>
             </tr>
             <tr>
-                <td>SIEM Implementation and Log Analysis</td>
-                <td><a href="https://google.com">Detection Lab 🔎</a></td>
+                <td>Vulnerability assessment</td>
+                <td><a href="Analyze a vulnerable system.html">Analyze a vulnerable system for a small business 🔎</a></td>
             </tr>
             <!-- Add more rows for other skills -->
         </table>
