--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 <th>Associated Project</th>
             </tr>
             <tr>
-                <td>Vulnerability assessment</td>
-                <td><a href="Analyze a vulnerable system.html">Analyze a vulnerable system for a small business 🔎</a></td>
+                <td>Authentication,  Vulnerability assessment, Cryptography, Asset Classification, Threat Modelling Analysis</td>
+                <td><a href="Assets & Threats & Vulnerabilities.html">Assets & Threats & Vulnerabilities 🔎</a></td>
             </tr>
             <!-- Add more rows for other skills -->
         </table>
