--- a/Risk register.html
+++ b/Risk register.html
@@ -118,6 +118,14 @@
             text-align: left;         
             font-size: 0.85em;        
         }
+        .back-link a {
+            font-family: 'Press Start 2P', cursive;
+            text-decoration: none;
+            background-color: #1c1c1c;
+            color: #8cff8c;
+            padding: 10px 20px;
+            border-radius: 5px;
+        }
     </style>
 </head>
 <body>
@@ -217,7 +225,9 @@
             </div>
             <img src="https://lh3.googleusercontent.com/pw/AP1GczNH67tQAubgDkOUJyf3sDITfGp8GD4amKCr3ZvL_0caPMNXDhVKXnAKrgZajPgu8ZZKsgmqcQwNaUtoxmkb0ezvKCMx_amAHAclTFTR0wFT4r6k-dM=w2400" alt="Infographic 1" onclick="openLightbox();changeImage(this.src)"> 
         </div>
-        
+        <div class="back-link">
+            <a href="index.html">Home</a>
+        </div>
     </div>
     
 </body>
