--- a/Risk register.html
+++ b/Risk register.html
@@ -118,6 +118,10 @@
             text-align: left;         
             font-size: 0.85em;        
         }
+        .back-link {
+            text-align: center;
+            margin-top: 20px;
+        }
         .back-link a {
             font-family: 'Press Start 2P', cursive;
             text-decoration: none;
@@ -225,7 +229,7 @@
             </div>
             <img src="https://lh3.googleusercontent.com/pw/AP1GczNH67tQAubgDkOUJyf3sDITfGp8GD4amKCr3ZvL_0caPMNXDhVKXnAKrgZajPgu8ZZKsgmqcQwNaUtoxmkb0ezvKCMx_amAHAclTFTR0wFT4r6k-dM=w2400" alt="Infographic 1" onclick="openLightbox();changeImage(this.src)"> 
             <div class="back-link">
-            <a href="index.html">Home</a>
+            <a href="Assets & Threats & Vulnerabilities.html">Back</a>
             </div>
         </div> 
     </div>
