--- a/Risk register.html
+++ b/Risk register.html
@@ -39,7 +39,7 @@
             margin-top: 0;
             font-size: 24px;
             color: #1c1c1c;
-            text-align: center;
+            text-align: left;
             margin-bottom: 20px;
         }
 
