--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
             color: #fff;
             margin: 0 10px;
         }
+        .social-links a img {
+            transition: transform 0.3s ease, filter 0.3s ease;
+        }
+        .social-links a img:hover {
+            transform: scale(1.1);
+            filter: brightness(0.9);
+        }
         .objective,
         .skills,
         .tools,
@@ -70,10 +77,14 @@
         .certifications div {
             margin-top: 10px;
         }
-        .tools img,
         .certifications img {
             margin: 0 5px;
             vertical-align: middle;
+            transition: transform 0.3s ease, filter 0.3s ease;
+        }
+        .certifications img:hover {
+            transform: scale(1.1);
+            filter: brightness(0.9);
         }
         .projects ul {
             list-style: none;
@@ -119,16 +130,16 @@
         }
         .explainer li ul li a:hover {
             text-decoration: none;
-            background-color: #007bff;
-            color: #fff;
+            background-color: none;
+            color: #007bff;
         }
         a {
             text-decoration: none;
             color: #007bff;
         }
         a:hover {
-            background-color: #007bff;
-            color: #fff;
+            background-color: none;
+            color: #007bff;
         }
     </style>
 </head>
@@ -167,14 +178,13 @@
                 <img src="https://img.shields.io/badge/-Wireshark-1679A7?&style=for-the-badge&logo=Wireshark&logoColor=white" />
                 <img src="https://img.shields.io/badge/-Nessus_Tenable-2896A8?&style=for-the-badge&logo=Tenable&logoColor=white" />
                 <img src="https://img.shields.io/badge/-Suricata-EF3B2D?&style=for-the-badge&logo=Suricata&logoColor=white" />
-                <img src="https://img.shields.io/badge/-Zeek-777BB4?&style=for-the-badge&logo=Zeek&logoColor=white" />
             </div>
         </div>
         
         <div>
             <h3>Endpoint 💻</h3>
             <div>
-                <img src="https://img.shields.io/badge/-SentinelOne-FF6600?&style=for-the-badge&logo=SentinelOne&logoColor=white" />
+                <img src="https://img.shields.io/badge/-SentinelOne-6804fc?&style=for-the-badge&logo=SentinelOne&logoColor=white" />
                 <img src="https://img.shields.io/badge/-CrowdStrike-FC4426?&style=for-the-badge&logo=CrowdStrike&logoColor=white" />
             </div>
         </div>
@@ -190,16 +200,15 @@
             <h3>Ticketing 🎫</h3>
             <div>
                 <img src="https://img.shields.io/badge/-Jira-0052CC?&style=for-the-badge&logo=Jira&logoColor=white" />
-                <img src="https://img.shields.io/badge/-TheHive-FF7F50?&style=for-the-badge&logo=TheHive&logoColor=white" />
+                <img src="https://img.shields.io/badge/-TheHive-e9cf42?&style=for-the-badge&logo=TheHive&logoColor=white&labelColor=ffffff" />
             </div>
         </div>
         
         <div>
             <h3>SIEM 🛡️</h3>
             <div>
-                <img src="https://img.shields.io/badge/-QRadar-061639?&style=for-the-badge&logo=IBM&logoColor=white" />
-                <img src="https://img.shields.io/badge/-Splunk-000000?&style=for-the-badge&logo=Splunk&logoColor=white" />
-                <img src="https://img.shields.io/badge/-Elastic-005571?&style=for-the-badge&logo=Elastic&logoColor=white" />
+                <img src="https://img.shields.io/badge/-QRadar-1064fc?&style=for-the-badge&logo=IBM&logoColor=white" />
+                <img src="https://img.shields.io/badge/-Splunk-70a44c?&style=for-the-badge&logo=Splunk&logoColor=white" />
             </div>
         </div>
     </div>
@@ -209,6 +218,9 @@
             <a href="https://www.credly.com/badges/a443a5c8-c1c5-4faa-b767-9a826d7f5ae0/public_url" target="_blank"><img src="https://img.shields.io/badge/-Security%2B-FF0000?&style=for-the-badge&logo=CompTIA&logoColor=white" alt="Security+"></a>
             <a href="https://www.credly.com/badges/37c7aedd-dcaa-4d10-9f42-cbbf87bca2fb/public_url" target="_blank"><img src="https://img.shields.io/badge/-Google_Cybersecurity-4285F4?&style=for-the-badge&logo=Google&logoColor=white" alt="Google Cybersecurity"></a>
             <a href="https://www.credly.com/badges/793c2273-9a78-4df7-8a59-260a39a32307/public_url" target="_blank"><img src="https://img.shields.io/badge/-Google_IT_Support-4285F4?&style=for-the-badge&logo=Google&logoColor=white" alt="Google IT Support"></a>
+            <a href="https://www.credly.com/badges/31b59f7f-bb33-4a1f-850b-ceab9559a1ee/public_url" target="_blank"><img src="https://img.shields.io/badge/-Fortinet-EE3124?&style=for-the-badge&logo=Fortinet&logoColor=white" alt="Introduction to the Threat Landscape 2.0"></a>
+            <a href="https://www.credly.com/badges/5f2ce453-9007-4beb-9b5a-9dee3ec6b1cf/public_url" target="_blank"><img src="https://img.shields.io/badge/-Armis-002554?&style=for-the-badge&logo=Armis&logoColor=white" alt="Cyber Defense Core"></a>
+
         </div>
     </div>      
     <div class="projects">
