--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@
                 <th>Associated Project</th>
             </tr>
             <tr>
+                <td>Command-line Interface, SQL, Linux, Bash</td>
+                <td><a href="Linux & SQL.html">Linux & SQL 🐧</a></td>
+            </tr>
+            <tr>
                 <td>Authentication,  Vulnerability assessment, Cryptography, Asset Classification, Threat Modelling Analysis</td>
                 <td><a href="Assets & Threats & Vulnerabilities.html">Assets & Threats & Vulnerabilities 🔎</a></td>
             </tr>
